--- a/public/500.html
+++ b/public/500.html
@@ -66,7 +66,7 @@ a:hover {
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
 </head>
